src/components/header/header.css
.symptom-check {
  position: fixed;
  top: 0;
  padding: 3px;
  width: 100%;
  /* background: #1341a3; */
  color: #fff;
  z-index: 999;
  font-weight: 700;
  min-height: 31px;
  text-align: center;
}

.symptom-check-arrow {
  margin-left: 0.5rem;
  position: fixed;
  top: 0;
  color: #fff;
  min-height: 31px;
}

.nav-top {
  display: flex;
  align-items: center;
  position: fixed;
  z-index: 101;
  width: 100%;
  top: 30px;
  height: 65px;
  background-color: #fff;
  justify-content: center;
}

.hamburger{
  cursor: pointer;
  font-size: 2.2rem;
}

.logo img{
  width: 100px;
}

/* customizing default css property of hamburgermenu library component  */
.sidebar-nav-logo {
  display: flex !important;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  align-self: flex-end;
  padding: 1rem !important;
  width: 65%;
}

.white-logo {
  width: 70px;
  height: 30px;
  background: #fff;
  padding: 2px;
  border-radius: 5px;
}

.login-signUp {
  display: flex;
  gap: 1.5rem;
}

.login-btn {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 40px;
  width: 70px;
  border: 1px solid white;
  border-radius: 2px;
  padding: 0.2rem;
  text-align: center;
}

/* customizing default css property of hamburgermenu library component  */
.bm-item {
  text-decoration: none;
  margin-bottom: 10px;
  margin-left: 1rem;
  color: white;
  font-size: 1.2rem;
  transition: color 0.2s;
  line-height: 2.5;
}

.bm-item-list {
  display: flex;
  flex-direction: column;
}

.menu-items {
  display: flex !important;
  flex-direction: column;
}
.menu-item {
  color: white;
}

.bm-burger-button {
  position: fixed;
  width: 35px;
  height: 20px;
  top: 3.2rem;
  left: 2rem
}

.bm-burger-bars {
  background: #1341a3;
  /* height: 10%; */
}

/* customizing default css property of hamburgermenu library component  */
.bm-cross-button {
  height: 60px !important;
  width: 60px !important;
  left: 0;
  margin-top: 7px;
}

.bm-cross-button span{
  right: 15px !important;
}

.bm-menu {
  background: #1341a3;
  width: 100%;
}

.bm-menu-wrap {
  width: 100% !important;
  top: 0 !important;
  left: 0;
}

.bm-cross {
  height: 30px !important;
  background: white;
}

.bm-overlay {
  background: #1341a3 !important;
  top: 0 !important;
  left: 0 !important;
  width: 100%;
  height: 100%;
}

.navbar-menu-items {
  display: none;
}

.hide-small {
  display: none;
}

@media screen and (min-width: 992px) {
  .burger-menu-nav-items {
    display: none;
  }
}

@media screen and (min-width: 992px) {
  .nav-top{
    justify-content: space-between;
  }
  .nav-bar-menu {
    display: flex;
    align-items: center;
    width: 80%;
    margin-left: 4.5rem;
  }
  .navbar-menu-items {
    display: flex;
    justify-content: space-around;
  }

  .nav-bar-list {
    margin-left: 4rem;
    width: 60%;
  }

  .nav-menu-item {
    color: #192849;
    font-size: 1.1rem;
    font-weight: 700;
  }

  .search-button {
    display: block;
    font-size: 1.5rem;
  }


  .sidebar-nav-logo {
    justify-content: flex-start;

  }

  .login-signUp {
    display: none;
  }

  .login-signUp-nav {
    display: flex;
  }

  .login-btn-nav {
    display: flex;
    justify-content: center;
    align-items: center;
    font-weight: 600;
    padding: 0.2rem;
    text-align: center;
  }

  .bm-overlay {
    background: none !important;
  }

  .bm-menu {
    width: 30%;
  }
}

